2005-11-28  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.4.1

2005-11-27  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gst-auth.c: added missing include, fixes #317222, patch from Dann
	Frazier <dannf@hp.com>

2005-09-04  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.4.0

2005-08-23  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.3.92

2005-08-22 Olaf Heiring <olh@suse.de>

	* src/common/gst-tool.c (read_everything): use int instead of char
	for characters, for 64bit.

2005-08-08  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.3.2

2005-07-26  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.3.1

2005-07-05  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.3.0.1

2005-07-05  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.3.0

2005-07-05  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gst-auth.c: center password dialog on main dialog

2005-06-23  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gst-filter.c: handle too the cases where the user deletes something
	in the filtered entry

2005-06-21  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gst-platform.c, gst-tool.c: Added Vida Linux OS icon

2005-06-12  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gst-auth.c: fixed a typo. Fixes #304032

2005-06-12  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gst-dialog.c: connect the key-press-event with connect_after, so it
	doesn't get annoying behavior in i.e. the network tool, when
	cancelling the edition of an editable GtkCellRendererText

2005-03-07  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.2.0

2005-03-02  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gst-dialog.c (dialog_delete_event_cb): really add a return value.
	Fixes #168941

2005-03-01  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.92

2005-02-24  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Makefile.am: ship CommonMakefile in the package. Fixes #167215

2005-02-08  Carlos Garnacho Parro  <carlosg@gnome.org>
